--- a/src/components/Home/Search/SearchBar.css
+++ b/src/components/Home/Search/SearchBar.css
@@ -10,13 +10,13 @@
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .input-container {
+.app.light .input-container {
     background-color: #ffffff; /* 흰색 배경 */
 
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .input-container {
+.app.dark .input-container {
     background-color: #424242;
 }
 
@@ -30,14 +30,14 @@ body.dark .input-container {
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .input {
+.app.light .input {
     border: 1px solid #ddd; /* 회색 테두리 */
 
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .input {
-    border: 1px solid #f9f9f9; /* 회색 테두리 */
+.app.dark .input {
+    border: 1px solid darkblue; /* 회색 테두리 */
 }
 
 /* 음성 버튼 및 전송 버튼 공통 스타일 */
@@ -56,13 +56,13 @@ body.dark .input {
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .voice-button .send-button {
+.app.light .voice-button .send-button {
     background-color: #ffffff; /* 버튼 배경색 */
 
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .voice-button .send-button {
+.app.dark .voice-button .send-button {
     background-color: #f0f0f0; /* 버튼 배경색 */
 }
 
@@ -88,7 +88,7 @@ body.dark .voice-button .send-button {
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .send-button {
+.app.light .send-button {
     background-color: #0066ff; /* 파란 배경 */
     color: #ffffff; /* 흰색 텍스트 */
     background-image: url('/images/white_search_icon.png'); /* 검색 아이콘 */
@@ -96,7 +96,7 @@ body.light .send-button {
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .send-button {
+.app.dark .send-button {
     background-color: #f0f0f0; /* 파란 배경 */
     color: #ffffff; /* 흰색 텍스트 */
     background-image: url('/images/s-icon-blk.png'); /* 검색 아이콘 */
@@ -107,13 +107,13 @@ body.dark .send-button {
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .voice-button:hover {
+.app.light .voice-button:hover {
     background-color: rgba(240, 240, 240, 0.78);
 
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .voice-button:hover {
+.app.dark .voice-button:hover {
     background-color: rgba(240, 240, 240, 0.78);
 }
 
@@ -123,13 +123,13 @@ body.dark .voice-button:hover {
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .send-button:hover {
+.app.light .send-button:hover {
     background-color: #005bb5; /* 호버 시 더 짙은 파란색 배경 */
 
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .send-button:hover {
+.app.dark .send-button:hover {
     background-color: rgba(245, 245, 245, 0.3);
 }
 
