--- a/src/components/Chat/ChatWindow.css
+++ b/src/components/Chat/ChatWindow.css
@@ -9,8 +9,6 @@
     transition: height 0.5s ease, padding 0.5s ease, max-height 0.3s ease; /* 확장 애니메이션 */
 }
 
-
-
 /* 첫 메시지 전송 시 확장된 상태 */
 .chat-window.expanded {
     max-height: 1000px; /* 확장된 상태에서의 최대 높이 */
@@ -37,7 +35,6 @@
 /* 공통 메시지 스타일 */
 .message {
     max-height: 2000px;
-
     border-radius: 30px; /* 둥근 모서리 */
     margin: 10px;
     max-width: 70%; /* 메시지 최대 너비 */
@@ -55,17 +52,17 @@
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .user-message {
+.app.light .user-message {
     background-color: #ffffff; /* 하얀 배경 */
     color: #0073e6; /* 파란 글씨 */
     border-color: #0073e6; /* 파란 테두리 */
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .user-message {
+.app.dark .user-message {
     background-color: #333;
     color: #f5f5f5;
-    border-color: #f5f5f5; /* 파란 테두리 */
+    border-color: #f5f5f5;
 
 }
 
@@ -79,14 +76,14 @@ body.dark .user-message {
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .assistant-message {
+.app.light .assistant-message {
     background-color: #0073e6; /* 파란 배경 */
     color: #ffffff; /* 하얀 글씨 */
     border-color: #ffffff; /* 하얀 테두리 */
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .assistant-message {
+.app.dark .assistant-message {
     background-color: #333;
     color: #f5f5f5;
     border-color: #f5f5f5; /* 파란 테두리 */
@@ -116,11 +113,11 @@ body.dark .assistant-message {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: white; /* 배경색 */
     padding: 10px;
     border-radius: 30px; /* 둥근 모서리 */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
     text-align: center;
+    margin-bottom: 8px;
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
