--- a/src/components/Home/Footer/Footer.css
+++ b/src/components/Home/Footer/Footer.css
@@ -1,20 +1,24 @@
 /* Footer.css */
 
+
 .footer {
     padding: 40px 0; /* 위아래 20px 간격 */
     text-align: center; /* 텍스트 가운데 정렬 */
     font-size: 14px; /* 폰트 크기 설정 */
     color: #555; /* 텍스트 색상 */
+    margin-top: 8px;
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .footer {
+.app.light .footer {
     color: #555; /* 텍스트 색상 */
+    background-color: #f0f0f0;
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .footer {
+.app.dark .footer {
     color: #f5f5f5;
+    background-color: #333;
 
 }
 
@@ -29,23 +33,23 @@ body.dark .footer {
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .team-info-link {
+.app.light .team-info-link {
     color: #555; /* 링크 색상 */
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .team-info-link {
+.app.dark .team-info-link {
     color: #f5f5f5;
 
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .hansung-link {
+.app.light .hansung-link {
     color: #555; /* 텍스트 색상 */
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .hansung-link {
+.app.dark .hansung-link {
     color: white;
 
 }
@@ -55,12 +59,12 @@ body.dark .hansung-link {
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .team-info-link:hover, .hansung-link:hover {
+.app.light .team-info-link:hover, .hansung-link:hover {
     color: #556; /* 호버 시 색상 변경 */
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .team-info-link:hover, .hansung-link:hover {
+.app.dark .team-info-link:hover, .hansung-link:hover {
     color: #f5f5f5;
 
 }
