--- a/src/components/Home/Loading/LoadingPage.css
+++ b/src/components/Home/Loading/LoadingPage.css
@@ -10,13 +10,13 @@
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .loading-page {
+.app.light .loading-page {
     background-color: #ffffff;
 
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .loading-page {
+.app.dark .loading-page {
     background-color: #333;
 }
 
