--- a/src/components/Home/Search/SuggestedQuestions.css
+++ b/src/components/Home/Search/SuggestedQuestions.css
@@ -13,7 +13,7 @@
 .suggestion-button {
     padding: 10px 20px; /* 버튼 내부 여백 */
     border-radius: 35px; /* 둥근 모서리 */
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1); /* 약간의 그림자 효과 */
+
     font-size: 16px; /* 텍스트 크기 */
     cursor: pointer; /* 커서를 포인터로 변경 */
     transition: background-color 0.3s; /* 배경 전환 효과 */
@@ -26,14 +26,19 @@
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .suggestion-button {
+.app.light .suggestion-button {
     background-color: #f0f0f0; /* 밝은 회색 배경 */
+    color: black;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1); /* 약간의 그림자 효과 */
+
 
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .suggestion-button {
-    background-color: #999999; /* 밝은 회색 배경 */
+.app.dark .suggestion-button {
+    background-color: #7777; /* 밝은 회색 배경 */
+    color: white;
+    border: 1px solid white;
 }
 
 /* 추천 질문 버튼 호버 스타일 */
@@ -41,14 +46,14 @@ body.dark .suggestion-button {
 }
 
 /* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 *//* 라이트 모드 */
-body.light .suggestion-button:hover {
+.app.light .suggestion-button:hover {
     background-color: #e0e0e0; /* 호버 시 밝은 회색 배경 */
 
 
 }
 
 /* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 *//* 다크 모드 */
-body.dark .suggestion-button:hover {
+.app.dark .suggestion-button:hover {
     background-color: rgba(245, 245, 245, 0.75); /* 호버 시 밝은 회색 배경 */
 
 }
